tweaks to 4 and 5

--- a/_posts/thesis_chapters/2025-6-5-Design_v16.md
+++ b/_posts/thesis_chapters/2025-6-5-Design_v16.md
@@ -470,16 +470,19 @@ Their inclusion in the design was an significant response to the contradictions 
 
 **what's not included here**
 
-While this chapter has attempted to incorporate a high level of detail of the learning design, for reasons of space, it is not complete. I now briefly list  what is missing from the learning design to indicate certain barriers avoided though omission, and to signpost aspects outside of the closer focus of the overall thesis
+While this chapter has attempted to incorporate a high level of detail of the learning design, for reasons of space, it is not complete.  I now briefly list what is omitted from this chapters description of learning design
+
+<!-- to indicate certain barriers avoided though omission, and to signpost aspects outside of the closer focus of the overall thesis -->
 
 I developed a visual process of learners mapping their progression from one GDP to another via a large scale visual map [37b].
 
-In P2 I began a map of learning dimension based broadly on the work of Brennan and Resnick [^37], of concepts that suit exploration via these game making activities. This was developed in D3 in relation to MakeCode resources to include more extensive description and more explicit alignment with curricular requirements [footnote? w/link].
+In P2 I began a map of learning dimension based broadly on the work of Brennan and Resnick [^37], of concepts that suit exploration via these game making activities. This was developed in D3 in relation to MakeCode resources to include more extensive description and more explicit alignment with curricular requirements [^ldim].
 
-Reflection activities carried out in role following Heathcote's Mantle of the Expert approach.
-THE TRANSCRIPT OF THE REFLECTION SESSION SEEMS TO ME MISSING FROM APPENDIX TOO. ADD BACK IN? IT'S A TABLE - COMPLEX TO ADD?
+Reflection activities carried out in role following Heathcote's Mantle of the Expert approach [@heathcote_drama_1994].
 
-However, given the sensitivity to alienation from programming culture shown in this section, and the fruitful nature of the peer playtesting activities. I did not prioritise the introduction of these concepts, or activities to teach or activities to reflect on how they were used retrospectively, adaptations that would suit migration to a computing classroom.   
+<!-- THE TRANSCRIPT OF THE REFLECTION SESSION SEEMS TO ME MISSING FROM APPENDIX TOO. ADD BACK IN? IT'S A TABLE - COMPLEX TO ADD? -->
+
+
 
 INTEGRATE ABOVE
 This study differs from much of the research in the domain of CGD&P in that cultural and social aspects of the learning design are prioritise over the personal appropriation of computing concepts and practices.
@@ -793,6 +796,9 @@ For a recap of benefits see Chapter 2.
 
 [^cp]: Code playgrounds, as described in Chapter 2, are online environments used to test, share or invite help from online users on complete or partial code projects or problems, primarily for web-based project involving the technologies of HTML, CSS and variations of JavaScript (for more detail see Appendix 5.tech)
 
+[^ldim]: While the learning resources of P2 and P3, which is analysed in depth are explored in more detail, those developed in D3 for P4 and P5 are relevant as a more suited to classrooms and therefore greater interplay with the learning map of curricular concepts.
+
+<!-- Given the sensitivity to alienation from programming culture shown in this section, and the fruitful nature of the peer playtesting activities. I did not prioritise the introduction of these concepts, or activities to teach or activities to reflect on how they were used retrospectively, adaptations that would suit migration to a computing classroom.  -->
 
 <!-- [^1]: https://mickfuzz.github.io/makecode-platformer-101/
 [^2]: https://mickfuzz.github.io/makecode-platformer-101/learningDimensions
