--- a/_posts/thesis_chapters/2025-7-5-Design_v16.md
+++ b/_posts/thesis_chapters/2025-7-5-Design_v16.md
@@ -551,12 +551,6 @@ A possible drawback of using a professional tool for novice learners is the risk
 
 The relationship between authentic and scaffolded processes can be understood as an inherent dialectical tension that learning designers should account for rather than attempt to eliminate.
 
-
-
-
-
-
-
 <!-- The use of black boxes is also widespread in professional coding practices, particularly through code libraries and frameworks. These tools provide pre-written, self-contained sections of code to simplify complex operations.  -->
 
 
@@ -578,6 +572,24 @@ Harbour walls prevent large waves from entering but also provide gaps allowing m
 
 
 <!-- In terms of agency and choice over learner pathway, Harbours are also safe places of play and learning. Harbours can be evocative and intriguing, inviting the possibility to travel beyond the walls to unexplored realms. -->
+
+
+### 3M game making (Meta) model of pedagogical elements of the learning design
+
+In summer 2020 I began early dissemination of results in a peer-reviewed book [@keane_teaching_2023]. The resulting chapter [@chesterman_game_2023], presented the essence of the learning resources and design to fellow practitioners and participants as well as researchers. To do this I created the frame of a 3M pedagogical model, to present simplified represtation of  key features of the model and the motivations behind them.
+
+![Figure 1.3. Synthesising diagram of 3M Game Making Model](./Pictures/3msynthesis.png){ width=80% }
+
+
+| **Missions**         | **Maps**             | **Methods**          |
+|----------------|-----------|------------|
+| Simple code changes yield quick feedback  | A map of learning dimensions flexibly linked to main missions/patterns can be used by both learners and facilitators       | Play Testing in each session aids short term motivation.  Showcase events help longer-term motivation and aid project prioritisation   |
+| Free choice of Patterns increases learner engagement and ownership   | Tracing the learner pathway on an attractive physical map in the learning space can help integrate navigation and reflection into the creative process | Drama and fictional scenarios can help explore issues and reduce learner anxiety though coding in a role          |
+| Restrict Game Type and number of Patterns to reduce Facilitator stress       |                      | Adding electronics to control the game via arcade buttons and cabinets increases engagement and perceptions of project authenticity |
+| Limit  complexity of patterns. Some are simple but cause a large change in the game       |    |        |
+| Side missions which explore and celebrate different ‘maker types’ (from  Bartle’s player types)          |        |     |
+
+Table 1.2.  Key Features of 3M Game Making Model
 
 
 ### Chapter conclusion
