--- a/_posts/thesis_chapters/tocs/2025-7-5-Design_v16.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2025-7-5-Design_v16.md_toc.md
@@ -50,5 +50,8 @@
             half-baked, and constructionist
             heuristics](#analysis-and-discussion-in-relation-to-existing-research---half-baked-and-constructionist-heuristics)
             -   [Harbour metaphor](#harbour-metaphor)
+        -   [3M game making (Meta) model of pedagogical elements of the
+            learning
+            design](#m-game-making-meta-model-of-pedagogical-elements-of-the-learning-design)
         -   [Chapter conclusion](#chapter-conclusion)
     -   [Footnotes](#footnotes)
