returning to chap 5 - design - from the fookin top

--- a/_posts/thesis_chapters/2025-7-5-Design_v16.md
+++ b/_posts/thesis_chapters/2025-7-5-Design_v16.md
@@ -16,8 +16,6 @@ title: 5. Findings - Design Narrative
         analysis)](#vignette-and-activity-system-analysis)
         -   [Diagrammatic representations - Drop, move or
             keep?](#diagrammatic-representations---drop-move-or-keep)
-        -   [Framing of GDPs as a germ cell concept - JUST MOVED
-            HERE](#framing-of-gdps-as-a-germ-cell-concept---just-moved-here)
     -   [Narrative exploration of key areas of contradictions emerging
         in the game-making learning
         design](#narrative-exploration-of-key-areas-of-contradictions-emerging-in-the-game-making-learning-design)
@@ -64,6 +62,9 @@ title: 5. Findings - Design Narrative
             half-baked, and constructionist
             heuristics](#analysis-and-discussion-in-relation-to-existing-research---half-baked-and-constructionist-heuristics)
             -   [Harbour metaphor](#harbour-metaphor)
+        -   [3M game making (Meta) model of pedagogical elements of the
+            learning
+            design](#m-game-making-meta-model-of-pedagogical-elements-of-the-learning-design)
         -   [Chapter conclusion](#chapter-conclusion)
     -   [Footnotes](#footnotes)
 
@@ -82,11 +83,13 @@ While Hoadley [-@hoadley_creating_2002] covers motivations of design narratives,
 
 <!-- COULD ADD IN - MY FACILITATOR INPUT IS acknowledgeD - BUT I AM NOT PERFECT - IT'S A STARTING PROCESS - CALL BACK LIMIATIONS IN CH. 4.  -->
 
-## Vignette (and activity system analysis)
+## Locating the game making activity
 
-EXPLAIN WHY GOING BACKWARDS - IE STARTING AT THE END.
+<!-- EXPLAIN WHY GOING BACKWARDS - IE STARTING AT THE END. -->
 
-To open this chapter, I present a summary of Vignette 1. Rather than serving as a formal analysis, it grounds the reader in the evolving design through a demonstration of the end point of the design process through from the perspective of a young participant in the process. This scene offers a humanising and situated entry point to a detailed exploration the wider project. The fuller vignette showing how learner motivation, intergenerational collaboration, and playful tool use unfolded in context, is included the special appendix chapter containing vignettes of activity (see Vignette 1 in Appendix V). These themes are developed in later sections.
+To open this chapter, I present a summary of Vignette 1. The purpose is to ground the reader in the evolving design through a demonstration of indicative activity from the perspective of a young participant in the process.
+
+This scene offers a humanising and situated entry point to a detailed exploration of the wider project. The fuller vignette showing how learner motivation, intergenerational collaboration, and playful tool use unfolded in context, is included the special appendix chapter containing vignettes of activity (see Vignette 1)[^appv]. These themes are developed in later sections. The vignette takes place at the start of the session in the latter stages of Phase 2 (P2), shortly after I had made a brief opening announcement, reminding participants' that it was the last coding session before the showcase event [^1].
 
 <!-- Only a short summary is included below due to space limitations, but readers are encouraged to consult the full vignette in Vignette 1 for a richer account of the episode. -->
 
@@ -96,12 +99,7 @@ To open this chapter, I present a summary of Vignette 1. Rather than serving as 
 Table 5.1 - A shorter extract of Vignette 1 focusing on an overview of the use of tools. -->
 <!-- DROP TABLE - INCLUDE SHORT SUMMARY. -->
 
-
-    The vignette takes place at the start of the session in the latter stages of Phase 2 (P2), shortly after I had made a brief opening announcement, reminding participants' that it was the last coding session before the showcase event [^1]. Following this, Toby, a child participant, had been working independently  for around five minutes of the session.
-
-![Figure.5.carrot - Final showcase activity in Brooks Building with home made cabinet surrounding a laptop computer.](./Pictures/carroteater3.jpg){width=90%}
-
-    On Toby’s right Mick is helping Veronica’s request, demonstrating how to access two different forms of help in the form of code examples and step by step tutorials. On his left grandparents Pearl and Clive and working on their own game (within earshot).
+     Toby, a child participant, had been working independently  for around five minutes of the session. On Toby’s right Mick is helping Veronica’s request, demonstrating how to access two different forms of help in the form of code examples and step by step tutorials. On his left grandparents Pearl and Clive and working on their own game (within earshot).
 
 ![Figure.5.x - Location of Toby ](./Pictures/vign_1_a_v1.png){width=90%}
 
@@ -110,13 +108,15 @@ Table 5.1 - A shorter extract of Vignette 1 focusing on an overview of the use o
 
 The full Vignette 1 demonstrates that  the immediate audience of his peers plays an important role in guiding his design decisions. During the session, Toby invites other group members to play his game, initiating and responding to conversations about the difficulty of his game design.
 
+ADD A QUICK SUMMARY OF PROCESS. LINK TO THIS IMAGE.
+
+![Figure.5.carrot - Final showcase activity in Brooks Building with home made cabinet surrounding a laptop computer.](./Pictures/carroteater3.jpg){width=90%}
+
 <!-- The sections that follow explore how such individual actions were scaffolded and how they contributed to the evolving activity system. DROP THIS? -->
 
-### Diagrammatic representations - Drop, move or keep?
+<!-- ### Diagrammatic representations
 
-To frame the scene within the broader analytic structure of the thesis, the following diagrams represent the activity systems in which this vignette is situated.
-
-The activity system can be seen as a joint activity stemming from the intersection of wider activity systems in Figure 5.broad. This figure is a necessary simplification of the diverse cultural and contextual factors that fed into the shared activity system of the game-making community. As explored in Chapter 3, this activity functioned as a shared object through which different motivations were negotiated through mutual appropriation [@lecusay_telementoring_2015]. Examples of the influence of these wider systems, including playful interactions, parental support, and practical guidance from facilitators, are explored further in Chapters 6 and 7.
+To frame the scene within the broader analytic structure of the thesis, the following diagrams represent the activity systems in which this vignette is situated. The activity system can be seen as a joint activity stemming from the intersection of wider activity systems in Figure 5.broad. This figure is a necessary simplification of the diverse cultural and contextual factors that fed into the shared activity system of the game-making community. As explored in Chapter 3, this activity functioned as a shared object through which different motivations were negotiated through mutual appropriation [@lecusay_telementoring_2015]. Examples of the influence of these wider systems, including playful interactions, parental support, and practical guidance from facilitators, are explored further in Chapters 6 and 7.
 
 ![Illustration 5.broad - Broad Environmental Activity Systems](./Pictures/At_dia_3_v3.png){width=95%}
 
@@ -124,11 +124,12 @@ Using a 3GAT lens, the component parts of this shared activity system are repres
 
 ![Figure 5.full - Activity system 1 - an emerging community of novice game makers creating games as a learning experience](./Pictures/At_dia_1_v5.png){width=95%}
 
-MOVED BIG CHUNK ON GDP TO CH.6.
+IT FEELS LIKE THIS SECTION  -->
 
 ## Narrative exploration of key areas of contradictions emerging in the game-making learning design
 
-In line with the theoretical framing established in Chapter 3, contradictions are understood as historically and structurally embedded misalignments between elements of an activity system, often made visible during periods of change or innovation [@engestrom_activity_1999]. Following Kuutti [-@kuutti_activity_1995] and Engeström [-@engestrom_discursive_2011], tensions, barriers, and disruptions in practice are treated as surface-level manifestations of deeper contradictions within and between activity systems. These manifestations may take the form of technical difficulties, motivational conflicts, or mismatches between participant expectations and other systemic elements shaping the activity. The following sections of this chapter examine three key areas of contradiction. As the phases of design and tools used are referred to frequently in this chapter Table 5.x is included as a summary. [footnote - callback Ch.4 & more detailed in Appendix 5.1.?]
+In line with the theoretical framing established in Chapter 3, contradictions are understood as historically and structurally embedded misalignments between elements of an activity system, often made visible during periods of change or innovation [@engestrom_activity_1999]. Following Kuutti [-@kuutti_activity_1995] and Engeström [-@engestrom_discursive_2011], tensions, barriers, and disruptions in practice are treated as surface-level manifestations of deeper contradictions within and between activity systems. These manifestations may take the form of technical difficulties, motivational conflicts, or mismatches between participant expectations and other systemic elements shaping the activity. The following sections of this chapter examine three key areas of contradiction. As the phases of design and tools used are referred to frequently in this chapter Table 5.x is included as a summary [^pp].
+
 
 <!-- ![](./Pictures/phases_diagram_chevrons_3.png){width=98%}
 
@@ -139,21 +140,21 @@ Figure. 5.x Reminder of delivery phases and development periods - DO SIMPLIFIED 
 - P3 - As per P2 & additional side-missions
 - P4 & 5 - Makecode Arcade -->
 
-| Phase     | Tools Used                                                                 |
+| Phase     | Brief description     |
 |-----------|-----------------------------------------------------------------------------|
-| P1        | Disparate non-code tools, Thimble (code playground)                        |
+| P1        | Exploratory process: with varied non-code tools use, and code playground use as a main coding environment, minimal supporting resources.    |
 | P2        | Glitch.com (code playground), Phaser.js (JavaScript game framework), Piskel (online pixel art editor) |
-| P3        | As per P2 & additional side-missions       |
-| P4 & P5   | Makecode Arcade   |
+| P3        | This phase used a similar approach to P2, the core toolset was unchanged, additional social missions and a drama narrative was added to the widre process.   |
+| P4 & P5   | These phases marke a transition to a block coding approach using MakeCode Arcade tool. Supported resources were developed integrated with computing curricular concepts. |
 
 
-Table. 5.x Reminder of delivery phases and development periods
+Table. 5.x Reminder of delivery phases and development periods -
 
-The first section addresses tensions arising from the introduction and evolution of technical tools in the learning design, particularly the shift in software practices between P1 and P2. The second focuses on contradictions related to navigation and supporting documentation during P2. The third explores cultural and identity-based tensions in coding participation, an area highlighted in earlier chapters as a persistent barrier to inclusion.
+The first area of contradiction addressed includes tensions arising from the introduction and evolution of technical tools in the learning design, particularly the shift in software practices between P1 and P2. The second focuses on a contradiction related to navigation and supporting documentation during P2. The third explores cultural and identity-based tensions in coding participation, an area highlighted in earlier chapters as a persistent barrier to inclusion.
 
 ### Contradiction area 1: involving organisational issues and the use of game programming and asset authoring tools
 
-MOVE THE PATTERN OF HOW I WRITE ON C1-3 HERE, description, tension, response.
+<!-- MOVE THE PATTERN OF HOW I WRITE ON C1-3 HERE, description, tension, response. -->
 
 In this section, I analyse journal notes, participant feedback, and the changes in the tools and resources used between P1 which was highly experimental and P2  which ended with a fuller implementation of introduced resources. The result is a composite description of key tensions in the process of game design activity.
 
@@ -195,7 +196,6 @@ Regarding tools, these tensions outlined above shaped a series of design adaptat
 
 <!-- THIS IS ALSO COVERED IN C3? -->
 
-REDUCE THIS BIT DOWN?
 The following section provides a description and analysis of the toolset that emerged from the tensions and contradictions of Phase 1 and then implemented in Phase 2. While P1 had been exploratory and had use a large set of tools, In P2 I reduced the number of tools suggested significantly [^15]. I offer the following overview to allow the reader a greater situated understanding of the activities being carried out [^16].
 
 <!-- ADD - Signposting sentence for the following sections  at the start
@@ -674,6 +674,10 @@ The structure of documentation, created in response to participant requests for 
 Gilbert is the worsted name.
 
 ## Footnotes
+
+[^appv]: All Vignettes are located in a special appendix called Appendix V.
+
+[^pp]: Chapter 4 describes the phases in more depth. A summary of the tools used in described in more detail in Appendix 5.1.x.
 
 [^1]:  I make the following opening announcement "We’ve got this one final making session next and then, if you can make it, the Monday after we can play our games and we can share them with students. We can make the students frustrated when they can’t beat our games. It’s usually quite fun. So, if we can do that - same time next week let me know. So, we’ll keep trying to help you and yes good luck everyone!".  See Appendix.V for full context. I CAN'T FIND THIS
 
